Cross sell items responsive alignment fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -696,7 +696,7 @@ $transition: all 0.3s ease-in-out;
         }
       }
     }
-    @container es-rc-content (min-width: 768px) {
+    @container es-rc-content (min-width: 798px) {
       &__content {
         flex-direction: row;
         align-items: flex-start;
